# estates

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  Untitled.ipynb  baseline_mode.py.ipynb  baseline_model.ipynb  environment.yaml  modeling_data.csv  modeling_data_prep.ipynb  modeling_data_prep.py  parsing_functions.py  playground.ipynb  pyproject.toml  read_csv.ipynb
crawler/: README.md  Run_geocode_address.ipynb  Run_parse_address.ipynb  Run_sreality.ipynb  Source_geocode_address.ipynb  Source_parse_adress.ipynb  Source_sreality.ipynb  Sreality_analysis_of_data.ipynb  f_geocode_address.py  f_parse_adress.py  f_sreality.py  srealityParams.json
crawler/dev/: Graphics_python.ipynb
hackathon/: baseline_model.py  modeling_data.csv  sample_request.py
hackathon/crawler/: sample_sreality_output_27112019.csv
lambda/: lambda_function.py  scraper.py
notebooks/: 01_dynamodb.ipynb  02_make_dataset.ipynb  03_Rentals.ipynb  04_EDA.ipynb  05_Preprocessing.ipynb  06_Model.ipynb  07_silver_to_rds_aurora.ipynb  Untitled.ipynb  baseline_mode.py.ipynb  playground.ipynb  sreality.ipynb
references/: sreality_mappings.json
src/: mappings.py  utils.py
src/data/: __init__.py  make_dataset.py
src/data/silver/: utils.py  (+5 more)
src/features/: __init__.py  build_features.py
src/scrapers/: lambda_function.py  scraper.py
sreality_scraping/: api_example.json  cache.txt  scrapy.cfg  utils.py
sreality_scraping/example_files/: sreality_variables.md
sreality_scraping/parsers/: sreality_parser.py
sreality_scraping/preprocessing/: parsing_functions.py  prague_rental_parser.py
(+9 files in other folders)
