[tool.poetry]
name = "estates"
version = "0.1.0"
description = "A machine learning model for rental price prediction built on top of data scraped from sreality.cz"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.72"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
